--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-body,html {
+body {
   width: 100vw;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
@@ -43,7 +43,7 @@ div.app:hover {
 
 header a {
   margin-left: 20px;
-  font-size: 15px;
+  font-size: 12.5px;
   font-weight: normal;
   margin: 10px;
   text-decoration: none;
@@ -121,12 +121,8 @@ div.button > button.btn {
 }
 
 div.button > button.btn:hover {
-  border: 1px solid #dadce0;
   outline: none;
-}
-
-content-wrap {
-  padding-bottom: 2.5rem;
+  box-shadow: 1px 1px 2px dimgray;
 }
 
 footer {
@@ -134,51 +130,31 @@ footer {
   display: inline;
   position: absolute;
   bottom: 0px;
-}
-
-footer > div > p {
-  width: 100%;
-  background-color: #f2f2f2;
-  padding: 10px 20px;
-}
-
-footer > div.sobre > ul {
-  display: inline-block;
+  background-color: #7a7a7a4c;
   padding: 10px;
-  background-color: #f2f2f2;
+  text-align: center;
   width: 100vw;
-  color: black;
+  height: 100px;
 }
 
-footer > div.sobre > ul > li {
-  display: inline-flex;
-  background-color: #f2f2f2;
-  position: relative;
+.footer-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
 }
 
-footer > div.sobre > ul > div.right {
-  display: inline-flex;
-  position: absolute;
-  left: 20%;
-  margin-left: 57vw;
-  justify-content: space-between;
-  justify-items: center;
-  align-items: center;
-}
-
-li {
-  list-style-type: none;
-  padding: 10px;
-}
-
-footer a {
-  color: black;
+.footer-links a {
   text-decoration: none;
+  color: #70757a;
+  font-size: 13px;
 }
 
-div.fundo-celular {
-    display: none;
+.footer-links a:hover {
+  text-decoration: underline;
 }
+
 
 @media (min-width: 320px) and (max-width:480px) {
  section.google > img {
@@ -198,10 +174,6 @@ div.fundo-celular {
  }
 
  div.button {
-    display: none;
- }
-
- div.sobre {
     display: none;
  }
 
@@ -226,8 +198,8 @@ div.fundo-celular {
  }
 }
 
-@media (min-width: 481px) and (max-width: 768px) {
-   section > div.button {
+/*@media (min-width: 481px) and (max-width: 768px) {
+    div.button {
     margin: auto;
     justify-content: center;
     align-items: center;
@@ -240,3 +212,119 @@ div.fundo-celular {
     align-items: center;
    }
 }
+*/
+
+/* Adicione as seguintes media queries ao final do seu arquivo CSS */
+
+/* Smartphones */
+@media (max-width: 480px) {
+  header {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  header > a {
+    font-size: 14.5px;
+  }
+  section.google > img {
+    width: 200px;
+    height: 90px;
+  }
+
+  section.pesquisa {
+    margin: 10px auto;
+  }
+
+  section.pesquisa > input {
+    width: 340px;
+    margin: 1px auto;
+    display: block;
+    margin-top: -80px;
+  }
+
+  div.button {
+    display: none;
+  }
+
+  div.fundo-celular {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  div.fundo-celular ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+/* Tablets */
+@media (min-width: 481px) and (max-width: 768px) {
+  section > div.button {
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.btn-centro {
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+/* Telas grandes */
+@media (min-width: 769px) {
+  section.google > img {
+    width: 300px;
+    height: 100px;
+  }
+
+  section.pesquisa > input {
+    width: 500px;
+  }
+}
+
+/* Adicione as seguintes media queries ao final do seu arquivo CSS */
+
+/* Smartphones */
+@media (max-width: 480px) {
+  /* ... seu código atual ... */
+}
+
+/* Tablets */
+@media (min-width: 481px) and (max-width: 768px) {
+  /* ... seu código atual ... */
+}
+
+/* Telas grandes */
+@media (min-width: 769px) {
+  section.google > img {
+    width: 300px;
+    height: 100px;
+  }
+
+  section.pesquisa > input {
+    width: 500px;
+  }
+
+  footer {
+    position: relative; /* Removemos 'position: absolute;' */
+    margin-top: 50px; /* Adicionamos um espaçamento no topo do footer */
+  }
+}
+
+/* Landscape */
+@media screen and (orientation: landscape) {
+  footer {
+    position: relative;
+    margin-top: 50px;
+  }
+}
+
